--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,16 @@ html, body{
 	height: 100%;
 	float: left;
 	position: relative;
-	font-family: 'Montserrat', sans-serif;
-	color: #fff;
-	box-sizing: border-box;
+	font-family: 'Open Sans', sans-serif;
+	color: #6d6d6d;
+	box-sizing: border-box
 }
 html{
 	background:#fff
 }
-a{text-decoration: none; color: #fff}
+a{
+	text-decoration: none
+}
 .main{
 	float: left;
 	width: 100%
@@ -21,62 +23,66 @@ a{text-decoration: none; color: #fff}
 	width: 100%;
 	float: left;
 	display: block;
+	position: relative;
 }
 .row{
 	display: block;
 	margin: 0 auto;
-	width: 1080px;
+	width: 1080px
 }
 .row-fluid{
 	width: 100%;
 	padding: 2%;
 	box-sizing: border-box;
 	float: left;
-	position: relative;
+	position: relative
+}
+.no-padding{
+	padding: 0 !important
 }
 /*paters*/
 .col{
-	float: left;
+	float: left
+}
+.col-md-8{
+	width: 65%;
+	float: left
 }
 .col-md-6{
-width: 50%;
-float: left;
+	width: 50%;
+	float: left
 }
 .col-md-4{
-width: 33.3%;
-float: left;
-}
-.col-md-4{
-width: 33.3%;
-float: left;
+	width: 33.3%;
+	float: left
 }
 .col-md-3{
-width: 25%;
-float: left;
+	width: 25%;
+	float: left
 }
 .title-section, .sub-title-section{
-	font-family: 'Helvetica Nue', sans-serif;
-	font-size: 42px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 48px;
 	line-height: 140%;
 	font-weight: 200;
 	margin-bottom: 20px;
-	color: #222;
+	color: #2b2b2b
 }
 .sub-title-section{
-	font-size: 18px;
+	font-size: 18px
 }
 .text-default{
-	font-family: 'Helvetica Nue', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	line-height: 170%;
 	font-weight: 200;
 	letter-spacing: 0.02em;
 	margin-bottom: 15px;
-	color: #222;
+	color: #6d6d6d
 }
 .text-default strong{
 	font-weight:300;
-	color: #2B2B23
+	color: #6d6d6d
 }
 .text-withe{color: #fff}
 .text-black{color: #222}
@@ -103,10 +109,10 @@ float: left;
 	text-indent: -9999px;
 	width: 300px;
 	height: 74px;
-	float: left;
+	float: left
 }
 .brand>img{
-	display: block;
+	display: block
 }
 .top-nav{
 	width: 60px;
@@ -114,17 +120,17 @@ float: left;
 	background: #fff;
 	float: right;
 	margin: 20px;
-	position: relative;
+	position: relative
 }
 .feature{
 	float: left;
 	width: 100%;
 	margin-top:100px;
-	display: block;
+	display: block
 }
 .feature-text{
 	color: #fff;
-	font-family: 'Helvetica Nue', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 56px;
 	width: 100%;
 	text-align: center;
@@ -132,16 +138,28 @@ float: left;
 	line-height: 160%
 }
 .feature-text small{
-	font-size: 32px;
+	font-size: 32px
 }
 .feature-text-paragraph{
-	font-size: 20px;
+	font-size: 20px
 }
 .box-cta{
 	width: 100%;
 	float: left;
 	display: block;
 	position: relative
+}
+.cta{
+	width: 200px;
+	height: 50px;
+	padding: 15px 40px;
+	text-align:center;
+	color: #fff;
+	background: #76d1de;
+	border-radius: 50px;
+	display: block;
+	margin: 30px 0;
+	transition: ease-out 0.2s all
 }
 .feature-cta{
 	width: 200px;
@@ -155,80 +173,148 @@ float: left;
 	margin: 30px auto;
 	transition: ease-out 0.2s all
 }
-.feature-cta:hover{
-	 opacity:0.8;
+.cta-dark{
+	background: #262626;
+	margin: 0 auto
+}
+.feature-cta:hover, .cta:hover, .cta-dark:hover{
+	opacity:0.7
 }
 #make-experience{
-	height: 800px
+	height: 920px
 }
-#make-experience p, #make-experience p{
-
+#make-experience .head-line p, #make-experience .head-line h2{
+	text-align: center
 }
-
+.description-case{
+	float: left;
+	padding: 15px;
+	width: 80%;
+	margin: 40px 0 0 0
+}
+.case-client-name{
+	margin-bottom: 20px;
+}
+.case-project-name{
+	color: #76d1de;
+	font-size: 32px;
+	font-weight: 200;
+	margin-bottom: 20px
+}
+.case-text-description{
+	margin-bottom: 15px;
+	font-size: 18px;
+	line-height: 140%
+}
 #case-1{
 	height: 500px;
-	background: #333a40; 
+	background: #333a40;
+}
+#case-1 .description-case{
+	padding: 60px;
+}
+#case-1 .case-client-name{
+	color: #76d1de;
+}
+#case-1 .case-project-name{
+	color: #ffffff
+}
+.frame-video-case-leve-me{
+	background: #333333 url('../img/bg-video-case-leve-me.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size: cover;
+	float: left;
+	width: 100%;
+	height: 500px;
+	display: block;
+
 }
 #case-2{
-	background: #13b7e9;
-	height: 800px;
+	background: #13b7e9 url('../img/bg-case-2.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size: cover;
+	height: 720px;
+
 }
+.img-case-broou{
+	display: block;
+	position: relative;
+	bottom: 0;
+	left: 25%
+}
+
+#case-2 .description-case{
+	display: block;
+	margin: 0 auto;
+	width: 400px;
+}
+
+#case-2 .case-project-name, #case-2 .case-client-name, #case-2 .default-text{
+	color: #ffffff;
+	text-align: center;
+}
+
+
 #clientes{
 	background: #eeeeee;
-	height: 400px;
+	height: 400px
 }
 #semana-1{
 	background: #13b7e9;
-	height: 800px;
+	height: 800px
 }
 #semana-2{
 	background: #82d9e5;
-	height: 800px;
+	height: 800px
 }
 #semana-3{
 	background: #333a40;
-	height: 500px;
+	height: 500px
 }
 #design-conections{
 	background: #e1ce4a;
-	height: 600px;
+	height: 600px
 }
 #idealizadores{
-	background: #ffff;
-	height: 500px;
+	background: #ffffff;
+	height: 500px
 }
 #contato{
 	background: #eeeeee;
-	height: 500px;
+	height: 500px
 }
 #footer{
 	background: #fff;
-	height: 300px;
+	height: 300px
 }
 @media only screen and (max-width: 680px) {
-    .row-fluid{
-    	width: 90%;
-    }
-    .col-md-6{
-    	width: 100%;
-    	float: left;
-    }
-    .col-md-4{
-    	width: 100.3%;
-    	float: left;
-    }
-    .col-md-4{
-    	width: 50.%;
-    	float: left;
-    }
-    .col-md-3{
-    	width: 100%;
-    	float: left;
-    }
-    .about-img{
-	display: block;
-	margin: 20px auto;
-	width: 100%
+	.row-fluid{
+		width: 90%;
 	}
-    
+	.col-md-6{
+		width: 100%;
+		float: left;
+	}
+	.col-md-4{
+		width: 100.3%;
+		float: left;
+	}
+	.col-md-4{
+		width: 50.%;
+		float: left;
+	}
+	.col-md-3{
+		width: 100%;
+		float: left;
+	}
+	#make-experience, #case-1, #case-2, #case-3{
+	height: auto !important;
+	}
+
 }
