--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@ h1, h2, h3{
 	width: 140px;
 	text-align: left;
 	text-indent: 10px;
-	width: 125px
+	width: 125px;
 }
 .top-nav-cta:hover{
 	color: #fff !important;
@@ -165,11 +165,12 @@ h1, h2, h3{
 }
 
 .nav-fixed{
-	background: #fff;
+	background: rgba(255, 255, 255, 0.99);
+	filter: blur(20px);
 	height: 75px;
 	position: fixed;
 	z-index: 5;
-	border-bottom: solid 1px #e4e4e4;
+	border-bottom: solid 1px #eeeeee;
 	padding: 1% 2%;
 }
 /*alteracoes no menu quando fixo*/
@@ -196,6 +197,9 @@ h1, h2, h3{
 }
 .feature-text{
 	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	text-rendering: optimizeLegibility;
+	letter-spacing: 0.02em;
 	font-size: 56px;
 	width: 100%;
 	text-align: center;
@@ -208,7 +212,11 @@ h1, h2, h3{
 	font-size: 32px
 }
 .feature-text-paragraph{
-	font-size: 20px
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	text-rendering: optimizeLegibility;
+	letter-spacing: 0.04em;
 }
 .box-cta{
 	width: 100%;
@@ -217,6 +225,10 @@ h1, h2, h3{
 	position: relative
 }
 .cta{
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	text-rendering: optimizeLegibility;
+	letter-spacing: 0.1em;
 	width: 180px;
     height: 45px;
     padding: 12px 40px;
@@ -244,29 +256,30 @@ h1, h2, h3{
 }
 .cta-play-video{
 	background: none;
-	color: #f25c6a;
-	width: 165px;
-	padding: 10px 0;
+	color: #fff;
+	width: 180px;
+	padding: 10px 20px;
 	margin: 0;
 	text-align: left;
+	border: solid 1px #fff;
 }
 .cta-play-video span{
-	width: 30px;
-	height:30px;
+	width: 25px;
+	height:25px;
 	border-radius: 50%; 
-	border: solid 1px #f25c6a;
+	border: solid 1px #fff;
 	float: right;
-	margin: -3px 0 0 0;
+	margin: -2px 0 0 0;
 }
 .arrow-right{
 	width: 0;
 	height: 0;
-	border-top: 8px solid transparent;
-	border-bottom: 8px solid transparent;
-	border-left: 8px solid #f25c6a;
+	border-top: 6px solid transparent;
+	border-bottom: 6px solid transparent;
+	border-left: 6px solid #fff;
 	border-right: 0 solid transparent;
 	float: left;
-	margin: 6px 0 0 12px;
+	margin: 6px 0 0 10px;
 }
 .bt-play-video{
 	width: 80px;
@@ -298,10 +311,18 @@ h1, h2, h3{
 #make-experience .head-line p, #make-experience .head-line h2{
 	text-align: center
 }
+.img-case-destaque{
+	display: block;
+	margin: 0 auto;
+}
 .description-case{
 	padding: 15px;
 	width: 80%;
-	margin: 40px 0 0 0
+	
+}
+#make-experience .description-case{
+	
+	margin: 100px 0 0 0
 }
 .case-client-name{
 	margin-bottom: 20px;
@@ -322,6 +343,7 @@ h1, h2, h3{
 }
 #case-1 .description-case{
 	padding: 60px;
+	margin-top: 50px
 }
 #case-1 p{
 	color: #9797a3;
@@ -341,6 +363,12 @@ h1, h2, h3{
 	height: 500px;
 	display: block;
 	position: relative;
+
+}
+#video-placeholder{
+	float: left;
+	width: 100%;
+	height: 100%;
 
 }
 #case-2{
@@ -388,19 +416,36 @@ h1, h2, h3{
 	margin: 40px 0
 }
 .client-list{
-	float: left;
-	width: 100%;
+	display: block;
+	width: 90%;
 	padding: 0 40px;
-	margin-bottom: 20px
+	margin: 20px auto
 }
 .client-list-item{
 	float: left;
-	margin: 20px;
+	margin: 43px;
 }
+
 .client-list-item img{
 	display: block;
 	margin: 0 auto
 }
+.client-list-item:nth-child(2) img {
+	margin-top: 20px !important;
+}
+.client-list-item:nth-child(3) img {
+	margin-top: 15px !important;
+}
+.client-list-item:nth-child(4) img {
+	margin-top: 5px !important;
+}
+.client-list-item:nth-child(5) img {
+	margin-top: -10px !important;
+}
+.client-list-item:nth-child(6) img {
+	margin-top: 10px !important;
+}
+
 #metodo{
 	height: auto;
 	background: #ffffff url('../img/photo-sprint.jpg') 0 200px no-repeat;
@@ -724,12 +769,16 @@ h1, h2, h3{
 .social-item a{
 	width: 35px;
 	height: 35px;
-	border: solid 1px #666;
+	border: solid 1px #b3b5b6;
 	border-radius: 50%;
 	float: left;
 }
-
-
+.icon-linkedin{
+	background: url(../img/icon-linkedin.png) 4px 3px no-repeat;
+}
+.icon-facebook{
+	background: url(../img/icon-facebook.png) 4px 3px no-repeat;
+}
 @media only screen and (max-width: 680px) {
 	.row-fluid{
 		
