--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,8 @@ h1, h2, h3{
 .text-white{color: #fff !important}
 .text-black{color: #222}
 .text-blue{color: #76d1de}
-.pull-left{float: left;text-align: left;}
-.pull-right{float: right;text-align: right;}
+.pull-left{float: left !important;text-align: left;}
+.pull-right{float: right !important;text-align: right;}
 .link-default{color: #2B2B23}
 .link-default:hover{color: #B7860B}
 
@@ -50,7 +50,7 @@ h1, h2, h3{
 }
 .row-fluid{
 	width: 100%;
-	padding: 2% 0;
+	padding: 2% ;
 	box-sizing: border-box;
 	float: left;
 	position: relative
@@ -111,6 +111,7 @@ h1, h2, h3{
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size: cover;
+
 }
 
 .brand{
@@ -343,11 +344,12 @@ h1, h2, h3{
 }
 #case-1{
 	height: 500px;
-	background: #333a40;
+	background: #333a40
 }
 #case-1 .description-case{
 	padding: 60px;
 	margin-top: 50px
+
 }
 #case-1 p{
 	color: #9797a3;
@@ -376,15 +378,12 @@ h1, h2, h3{
 
 }
 #case-2{
-	background: #5dc7e8;
-	background-repeat: no-repeat;
-	background-size: cover;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	-o-background-size: cover;
+	background: #5dc7e8 url('../img/app-broou-iphone.png') bottom center no-repeat;
+	padding-bottom: 370px;
 	height: 720px;
 
 }
+
 #case-2 .p-absolute{
 	position: absolute;
 	bottom: 0
@@ -665,7 +664,7 @@ h1, h2, h3{
 #idealizadores{
 	background: #ffffff;
 	height: auto;
-	padding: 40px 0
+	padding: 40px 0;
 }
 #idealizadores .head-line{
 	text-align: center;
@@ -783,9 +782,13 @@ h1, h2, h3{
 .icon-facebook{
 	background: url(../img/icon-facebook.png) 4px 3px no-repeat;
 }
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 780px) {
 	.row, .row-fluid{
-		width: 100%	
+		width: 100%	!important
+	}
+	.col-md-8{
+		width: 100%;
+		float: left
 	}
 	.col-md-6{
 		width: 100%;
@@ -824,8 +827,10 @@ h1, h2, h3{
 	#make-experience, #case-1, #case-2, #case-3{
 		height: auto !important
 	}
-	#make-experience .description-case{
-		margin: 0 0 20px 0
+	
+	#case-1 .description-case, #make-experience .description-case{
+		margin: 0;
+		padding: 70px;
 	}
 	.client-list-item {
     	float: left;
@@ -858,7 +863,7 @@ h1, h2, h3{
 		padding: 4% 2%
 	}
 	.pull-right, .pull-left{
-		float: none
+		float: none !important
 	}
 	.idealizador-img img{
 		display: block;
@@ -867,4 +872,33 @@ h1, h2, h3{
 	.idealizador-name, .idealizador-bio{
 		text-align: center
 	}
+	.img-case-destaque{
+		width: inherit;
+		height: inherit;
+		padding: 0 4%
+	}
+}
+@media only screen and (max-width: 435px) {
+	.feature{
+		margin-top: 100px;
+	}
+	h2{
+		font-size: 36px !important;
+	}
+	.idealizador-img img{
+		width: inherit;
+		height: inherit;
+	}
+	.client-list{
+		width: 100%;
+		float: left;
+	}
+	.frame-video-metodo {
+		width: 100%
+	}
+	.contact-form{
+		width: 100%;
+		padding: 0 10%
+	}
+	
 }
