--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,18 @@
-*{border:0;padding:0;margin:0;list-style:none;text-decoration:0;box-sizing: border-box;}
+*{
+	border:0;padding:0;
+	margin:0;
+	list-style:none;
+	text-decoration:0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+}
 html, body{
-	display:table;
 	width: 100%;
 	height: 100%;
 	float: left;
@@ -8,6 +20,11 @@ html, body{
 	font-family: 'Open Sans', sans-serif;
 	color: #6d6d6d;
 	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+}
+p, a, h1, h2, h3,{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-o-box-sizing: border-box;
@@ -36,6 +53,11 @@ h1, h2, h3{
 	width: 100%;
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	position: relative;
 }
 .container{
 	width: 100%;
@@ -46,7 +68,8 @@ h1, h2, h3{
 .row{
 	display: block;
 	margin: 0 auto;
-	width: 1080px
+	width: 1080px;
+	position: relative;
 }
 .row-fluid{
 	width: 100%;
@@ -111,9 +134,7 @@ h1, h2, h3{
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size: cover;
-
 }
-
 .brand{
 	color:#fff;
 	display: block;
@@ -134,7 +155,7 @@ h1, h2, h3{
 }
 .top-nav-menu, .social-nav{
 	float: left;
-	width: 100%;
+	/*width: 100%;*/
 }
 .top-nav .top-nav-item, .social-item{
 	float: left;
@@ -209,7 +230,7 @@ h1, h2, h3{
 	width: 100%;
 	text-align: center;
 	font-weight: 200;
-	line-height: 120%;
+	line-height: 100%;
 	text-shadow: 0 1px 1px  rgba(22, 22, 22, 0.7);
 	margin-bottom: 20px;
 }
@@ -222,6 +243,7 @@ h1, h2, h3{
 	font-weight: 100;
 	text-rendering: optimizeLegibility;
 	letter-spacing: 0.04em;
+	line-height: 140%
 }
 .box-cta{
 	width: 100%;
@@ -248,7 +270,7 @@ h1, h2, h3{
 	transition: ease-out 0.2s all
 }
 .feature-cta{
-	width: 200px;
+	width: 270px;
 	height: 50px;
 	padding: 15px 40px;
 	text-align:center;
@@ -451,23 +473,23 @@ h1, h2, h3{
 
 #metodo{
 	height: auto;
-	background: #ffffff url('../img/photo-sprint.jpg') 0 200px no-repeat;
+	background: #ffffff;
 	padding-bottom: 40px
 }
 #metodo .head-line p, #metodo .head-line h2{
 	text-align: center;
 } 
 .frame-video-metodo{
-	width: 370px;
-	height: 240px;
+	width: 530px;
+	height: 344px;
 	float: right;
 	background: #e2e2e7 url('../img/frame-metodo.jpg') no-repeat;
-	margin-top: 100px; 
+	margin-top: 0; 
 	position: relative;
 }
 .frame-video-metodo .bt-play-video{
-	top:85px;
-	left: 147px
+	top:130px;
+	left:245px
 }
 .metodo-list{
 	float: left;
@@ -482,13 +504,52 @@ h1, h2, h3{
 	width: 100%;
 	line-height: 130%;
 	list-style-image: url('../img/check.png');
-	margin-bottom: 20px;
+	margin-bottom: 18px;
 }
 #metodo .cta{
 	float: left;
-	margin-left: 50px
+	margin-left: 50px;
+	width: 290px
 }
+/*list-steps*/
+.list-steps{
+	width: 1280px;
+	display: block;
+	margin: 0 auto
+}
+.step-item{
+	float: left;
+	width: 280px;
+	padding:0 20px;
+	margin: 0 20px;
+}
+.step-title{
+	width: 100px;
+	height:100px;
+	padding:30px 20px 20px 20px;
+	border-radius: 50%; 
+	background: #f25c6a;
+	color: #fff;
+	font-size: 14px;
+	text-align: center;
+	float: left;
+	margin: 0 0 15px 70px;
+}
+.step-title span{
+	font-size: 18px
+}
+.step-equipe{
+	background: #95bbab;
+	padding:40px 20px 20px 20px;
 
+}
+.step-text{
+	width: 100%;
+	float: left;
+	text-align: center !important;
+	font-size: 14px;
+	text-transform: uppercase;
+}
 /*modal*/
 .modal-content{
 	padding: 2% 5%
@@ -679,7 +740,7 @@ h1, h2, h3{
 	float: left;
 }
 .idealizador-info{
-	line-height: 150%;
+	line-height: 200%;
 	padding: 5%
 }
 .idealizador-name{
@@ -783,7 +844,8 @@ h1, h2, h3{
 	background: url(../img/icon-facebook.png) 4px 3px no-repeat;
 }
 @media only screen and (max-width: 780px) {
-	.row, .row-fluid{
+
+	.row, .row-fluid, .list-steps{
 		width: 100%	!important
 	}
 	.col-md-8{
@@ -822,15 +884,20 @@ h1, h2, h3{
 		height: auto
 	}
 	.feature{
-		padding: 15px 
+		padding: 15px ;
+		margin-top: 50px
 	}
 	#make-experience, #case-1, #case-2, #case-3{
 		height: auto !important
 	}
-	
-	#case-1 .description-case, #make-experience .description-case{
+	.description-case{
+		width: 90%;
+		padding: 60px 40px
+	}
+	#case-1 .description-case, #make-experience .description-case, #case-2 .description-case{
 		margin: 0;
-		padding: 70px;
+		padding: 30px;
+		width: 100%;
 	}
 	.client-list-item {
     	float: left;
@@ -842,25 +909,32 @@ h1, h2, h3{
     	background: #ffffff
 	}
 	#metodo .cta {
-    	display: none
+    	margin-left: 0; 
 	}
 	.frame-video-metodo{
 		display: block;
 		float: none;
-		margin: 0 auto
+		margin: 0 auto;
+		display: none;
 	}
 	.metodo-list{
 		margin-top: 7%;
 	}
 	#design-conections .description-case{
-		margin: 0
+		margin: 0;
+		width: 100%
 	}
 	#design-conections{
 		height: auto;
 		padding: 2% 0
 	}
+	#design-conections .cta{
+		margin-bottom: 20px
+	}
 	.conections-title{
-		padding: 4% 2%
+		padding: 4% 2%;
+		font-size: 30px !important;
+		margin-left: 30px
 	}
 	.pull-right, .pull-left{
 		float: none !important
@@ -877,10 +951,20 @@ h1, h2, h3{
 		height: inherit;
 		padding: 0 4%
 	}
+	.step-item{
+		width: 50% ;
+		float: left;
+		margin: 0 ;
+		min-height:240px;
+
+	}
+	.step-title{
+		margin-left:35% 
+	}
 }
-@media only screen and (max-width: 435px) {
+@media only screen and (max-width: 340px) {
 	.feature{
-		margin-top: 100px;
+		
 	}
 	h2{
 		font-size: 36px !important;
@@ -899,6 +983,9 @@ h1, h2, h3{
 	.contact-form{
 		width: 100%;
 		padding: 0 10%
+	}
+	.step-item{
+		width: 100%;
 	}
 	
 }
