--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,7 @@ h1, h2, h3{
 	color: #fff;
 	width: 180px;
 	padding: 10px 20px;
-	margin: 0;
+	margin: 20px 0;
 	text-align: left;
 	border: solid 1px #fff;
 }
@@ -372,7 +372,7 @@ h1, h2, h3{
 	margin-bottom: 30px
 }
 .case-text-description{
-	margin-bottom: 15px;
+	margin-bottom: 35px;
 	font-size: 18px;
 	line-height: 140%
 }
@@ -581,7 +581,6 @@ h1, h2, h3{
 }
 .modal-content{
 	padding: 2% 5%;
-	float: left;
 }
 .close-animatedModal{
 	width: 40px;
@@ -707,7 +706,9 @@ h1, h2, h3{
 	left: 50%;
 	margin: 20px 0
 }
-
+#play-video-metodo{
+		display: none;
+	}
 #semana-1{
 	background: #ffffff;
 	height: auto;
@@ -817,7 +818,10 @@ h1, h2, h3{
 .contact-form .cta{
 	float: none;
 	display: block;
-	margin: 15px auto
+	margin: 15px auto;
+	-webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none
 }
 #footer{
 	background: #fff;
@@ -933,15 +937,18 @@ h1, h2, h3{
 	}
 	.client-list-item {
     	float: left;
-    	width: 50%;
+    	width: 100%;
     	min-height: 100px;
     	margin: 0
 	}
+
 	#metodo {
     	background: #ffffff
 	}
-	#metodo .cta {
-    	margin-left: 0; 
+	
+	#metodo .cta{
+		margin: 10px;
+		width: 95%
 	}
 	.frame-video-metodo{
 		display: block;
@@ -967,14 +974,19 @@ h1, h2, h3{
 	.conections-title{
 		padding: 4% 2%;
 		font-size: 30px !important;
-		margin-left: 30px
+		margin: 20px 20px 0 30px
 	}
 	.pull-right, .pull-left{
 		float: none !important
 	}
 	.idealizador-img img{
 		display: block;
-		margin: 0 auto
+		margin: 0 auto;
+		width: inherit;
+    	height: inherit;
+	}
+	.idealizador-name{
+		line-height: 140%
 	}
 	.idealizador-name, .idealizador-bio{
 		text-align: center
@@ -985,10 +997,10 @@ h1, h2, h3{
 		padding: 0 4%
 	}
 	.step-item{
-		width: 50% ;
+		width: 100% ;
 		float: left;
-		margin: 0 ;
-		min-height:240px;
+		margin: 0 0 15px 0 ;
+		min-height:auto;
 
 	}
 	.step-title{
@@ -997,14 +1009,15 @@ h1, h2, h3{
 	.steps-line{
 		display: none;
 	}
-	.modal-content{
-	padding: 2%;
+	.contact-form{
+		width: 100%;
 	}
-	.close-animatedModal{
-		margin: 
+	.input-full{
+		width: 90%;
+    	margin: 0 15px
 	}
 	.modal-content iframe{
-		height: 300px !important
+		height: 300px 
 	}
 }
 @media only screen and (max-width: 340px) {
@@ -1041,7 +1054,7 @@ h1, h2, h3{
 		width: 100%
 	}
 	.contact-form{
-		width: 100%;
+		width: 300px;
 		padding: 0 10%
 	}
 	.step-title{
@@ -1049,10 +1062,12 @@ h1, h2, h3{
 	}
 	.step-item{
 		width: 100%;
-		min-height: 220px;
+		min-height: auto;
 	}
-	#metodo .cta{
-		margin: 10px
+	.modal-content{
+	padding: 2%;
 	}
-	
+	.close-animatedModal{
+		margin: 
+	}
 }
