--- a/css/main.css
+++ b/css/main.css
@@ -1053,6 +1053,16 @@ h1, h2, h3{
 	.modal-content iframe{
 		height: 300px 
 	}
+	#case-2 .box-cta{
+	margin: 0 auto;
+	float: none;
+	display: block;
+	width: 300px
+	}
+	#case-2 .cta{
+		float: none;
+		margin: 5px auto;
+	}
 }
 @media only screen and (max-width: 340px) {
 	.feature{
@@ -1104,4 +1114,5 @@ h1, h2, h3{
 	.close-animatedModal{
 		margin: 
 	}
+
 }
